--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "express-jwt": "^6.0.0",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.13.0",
     "react-hot-loader": "^4.13.0"
