--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mern-skeleton",
   "version": "1.0.0",
   "description": "A MERN stack skeleton web application",
-  "main": "index.js",
+  "main": "template.js",
   "scripts": {
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
@@ -28,9 +28,17 @@
     "nodemon": "^2.0.7",
     "webpack": "^5.41.0",
     "webpack-cli": "^4.7.2",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^17.0.1",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@material-ui/system": "^4.11.3",
+    "@types/react-transition-group": "^4.4.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -39,7 +47,13 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mini-create-react-context": "^0.4.1",
     "mongoose": "^5.13.0",
-    "react-hot-loader": "^4.13.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-transition-group": "^4.4.2"
   }
 }
